--- a/index.html
+++ b/index.html
@@ -299,6 +299,10 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[July, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Xiaohan! <br/> 
+                        <i>In this paper, we introduce a new concept, named <b>API semantics</b>, to tackle model aging (a long-standing problem) in evolved malware detection, from the perspective of enhancing feature space abstractions. </i>
+                    </li>
+                    <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li>
                     <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> <i>This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
                     <li>[March, 2020] One paper (conditionally) accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> <i>This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
                     <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
@@ -323,36 +327,45 @@
             <hr size=2>
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
-                <ol>                   
+                <ol>    
+                    <li>
+                        <div class="title">Enhancing State-of-the-art Classifiers with API Semantics to Detect Evolved Android Malware.</div>
+                        <div class="author">Xiaohan Zhang, Yuan Zhang, Ming Zhong, Daizong Ding, Yinzhi Cao, Yukun Zhang, Mi Zhang, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020 (comming soon).
+                        </div>
+                    </li>               
                     <li>
                         <div class="title">PDiff: Semantic-based Patch Presence Testing for Downstream Kernels.</div>
                         <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Qi Wen, Zhenghe Wang, Xiaohan Zhang, Xinyu Xing, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS, Orlando, USA, November 9-13, 2020 (conditionally accepted).
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020 (comming soon).
                         </div>
                     </li>
                     <li>
                         <div class="title">BScout: Direct Whole Patch Presence Test for Java Executables.</div>
                         <div class="author">Jiarun Dai, Yuan Zhang, Zheyue Jiang, Yingtian Zhou, Junyan Chen, Xinyu Xing, Xiaohan Zhang, Xin Tan, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020 (comming soon).
+                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020.
+                            <a href="./paper/bscout-security20.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">An Ever-evolving Game: Evaluation of Real-world Attacks and Defenses in Ethereum Ecosystem.</div>
                         <div class="author">Shunfan Zhou, Zhemin Yang, Jie Xiang, Yinzhi Cao, Min Yang, Yuan Zhang.</div>
-                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020 (comming soon).
+                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020.
+                            <a href="./paper/smart-contract-security20.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">How Android Developers Handle Evolution-induced API Compatibility Issues: A Large-scale Study.</div>
                         <div class="author">Hao Xia, Yuan Zhang, Yingtian Zhou, Xiaoting Chen, Yang Wang, Xiangyu Zhang, Shuaishuai Cui, Gen Hong, Xiaohan Zhang, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 42nd International Conference on Software Engineering, ICSE'20, Seoul, South Korea, May 23-29, 2020 (comming soon).
+                        <div class="venue">In Proceedings of the 42nd International Conference on Software Engineering, ICSE'20, Seoul, South Korea, May 23-29, 2020.
+                            <a href="./paper/rapid-icse20.pdf">[Paper]</a>
                         </div>
                     </li> 
                     <li>
                         <div class="title">TextExerciser: Feedback-driven Text Input Exercising for Android Applications.</div>
                         <div class="author">Yuyu He, Lei Zhang, Zhemin Yang, Yinzhi Cao, Keke Lian, Shuai Li, Wei Yang, Zhibo Zhang, Min Yang, Yuan Zhang, Haixin Duan.</div>
                         <div class="venue">In Proceedings of the 41st IEEE Symposium on Security and Privacy, Oakland'20, San Francisco, CA, May 18-20, 2020.
-                            <a href="./paper/te-oakland20.pdf">[PDF]</a>
+                            <a href="./paper/te-oakland20.pdf">[Paper]</a>
                         </div>
                     </li>  
                     <li>
@@ -365,28 +378,28 @@
                         <div class="title">App in the Middle : Demystify Application Virtualization in Android and its Security Threats to over 100 Million Users.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Mingqi Li, Sen Yang, Min Yang, Yuan Zhang, Zhiun Qian.</div>
                         <div class="venue">In Proceedings of ACM SIGMETRICS / IFIP Performance 2019, Phoenix, Arizona, USA.
-                                <a href="./paper/app_virtualization_sigmetrics19.pdf">[PDF]</a>
+                                <a href="./paper/app_virtualization_sigmetrics19.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">How You Get Shot in the Back: A Systematical Study about Cryptojacking in the Real World.</div>
                         <div class="author">Geng Hong, Zhemin Yang, Sen Yang, Lei Zhang, Yuhong Nan, Zhibo Zhang, Min Yang, Yuan Zhang, Zhiyun Qian, Haixin Duan.</div>
                         <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
-                                <a href="./paper/cmtracker-ccs2018.pdf">[PDF]</a>
+                                <a href="./paper/cmtracker-ccs2018.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Invetter: Locating Insecure Input Validations in Android Services.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Zhenyu Zhang, Zhiyun Qian, Geng Hong, Yuan Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
-                                <a href="./paper/invetter-ccs2018.pdf">[PDF]</a>
+                                <a href="./paper/invetter-ccs2018.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">An Empirical Study of Web Resource Manipulation in Real-world Mobile Applications.</div>
                         <div class="author">Xiaohan Zhang, Yuan Zhang, Qianqian Mo, Hao Xia, Zhemin Yang, Min Yang, Xiaofeng Wang, Long Lu, Haixin Duan.</div>
                         <div class="venue">In Proceedings of the 27th USENIX Security Symposium, Security’18, Baltimore, USA, August 15-17, 2018.
-                            <a href="./paper/xpmchecker-security2018.pdf">[PDF]</a>
+                            <a href="./paper/xpmchecker-security2018.pdf">[Paper]</a>
                             <a href="https://xhzhang.github.io/XPMChecker/">[Dataset]</a>
                         </div>
                     </li>
@@ -394,7 +407,7 @@
                         <div class="title">Detecting Third-Party Libraries in Android Applications with High Precision and Recall.</div>
                         <div class="author">Yuan Zhang, Jiarun Dai, Xiaohan Zhang, Sirong Huang, Zhemin Yang, Min Yang, Hao Chen.</div>
                         <div class="venue">In Proceedings of IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER’18, Campobasso, Italy, March 20-23, 2018. 
-                            <a href="./paper/libpecker-saner2018.pdf">[PDF]</a>
+                            <a href="./paper/libpecker-saner2018.pdf">[Paper]</a>
 							<a href="https://github.com/yuanxzhang/LibPecker">[Source Code]</a>
                         </div>
                     </li>
@@ -402,63 +415,63 @@
                         <div class="title">Finding Clues for Your Secrets: Semantics-Driven, Learning-Based Privacy Discovery in Mobile Apps.</div>
                         <div class="author">Yuhong Nan, Zhemin Yang, Xiaofeng Wang, Yuan Zhang, Donglai Zhu, Min Yang.</div>
                         <div class="venue">In Proceedings of Network and Distributed System Security Symposium, NDSS’18, San Diego, Feb 18-21, 2018.
-                            <a href="./paper/cluefinder-ndss2018.pdf">[PDF]</a>
+                            <a href="./paper/cluefinder-ndss2018.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Identifying User-Input Privacy in Mobile Applications at a Large Scale.</div>
                         <div class="author">Yuhong Nan, Zhemin Yang, Min Yang, Shunfan Zhou, Yuan Zhang, Guofei Gu, Xiaofeng Wang, Limin Sun.</div>
-                        <div class="venue">In IEEE Transactions on Information Forensics and Security(TIFS), 2017, 12(3), 647-661.
-                            <a href="./paper/uipicker-tifs.pdf">[PDF]</a>
+                        <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2017, 12(3), 647-661.
+                            <a href="./paper/uipicker-tifs.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Rethinking Permission Enforcement Mechanism on Mobile Systems.</div>
                         <div class="author">Yuan Zhang, Min Yang, Guofei Gu, Hao Chen.</div>
-                        <div class="venue">In IEEE Transactions on Information Forensics and Security(TIFS), 2016, 9(11), 1828-1842.
-                            <a href="./paper/finedroid-tifs.pdf">[PDF]</a>
+                        <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2016, 9(11), 1828-1842.
+                            <a href="./paper/finedroid-tifs.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">FineDroid: Enforcing Permissions with System-wide Application Execution Context.</div>
                         <div class="author">Yuan Zhang, Min Yang, Guofei Gu, Hao Chen.</div>
                         <div class="venue">In Proceedings of the 11th EAI International Conference on Security and Privacy in Communication Networks, SecureComm’15, Dallas, TX, October 26-29, 2015.
-                            <a href="./paper/finedroid-securecomm2015.pdf">[PDF]</a>
+                            <a href="./paper/finedroid-securecomm2015.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">AppCracker: Widespread Vulnerabilities in User and Session Authentication in Mobile Apps.</div>
                         <div class="author">Fangda Cai, Hao Chen, Yuanyi Wu, Yuan Zhang.</div>
                         <div class="venue">In Proceedings of 4th IEEE Mobile Security Technologies (co-located with IEEE S&P), MoST’15, San Jose, CA, May 21, 2015.
-                            <a href="./paper/appcracker-most2015.pdf">[PDF]</a>
+                            <a href="./paper/appcracker-most2015.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Permission Use Analysis for Vetting Undesirable Behaviors in Android Apps.</div>
                         <div class="author">Yuan Zhang, Min Yang, Zhemin Yang, Guofei Gu, Peng Ning, Binyu Zang.</div>
-                        <div class="venue">In IEEE Transactions on Information Forensics and Security(TIFS), 2014, 9(11), 1828-1842.
-                            <a href="./paper/vetdroid-tifs.pdf">[PDF]</a>
+                        <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2014, 9(11), 1828-1842.
+                            <a href="./paper/vetdroid-tifs.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">AppIntent: Analyzing Sensitive Data Transmission in Android for Privacy Leakage Detection.</div>
                         <div class="author">Zhemin Yang, Min Yang, Yuan Zhang, Guofei Gu, Peng Ning and X. Sean Wang.</div>
                         <div class="venue">In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.
-                            <a href="./paper/appintent-ccs2013.pdf">[PDF]</a>
+                            <a href="./paper/appintent-ccs2013.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Vetting Undesirable Behaviors in Android Apps with Permission Use Analysis.</div>
                         <div class="author">Yuan Zhang, Min Yang, Bingquan Xu, Zhemin Yang, Guofei Gu, Peng Ning, X. Sean Wang, Binyu Zang.</div>
                         <div class="venue">In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.
-                            <a href="./paper/vetdroid-ccs2013.pdf">[PDF]</a>
+                            <a href="./paper/vetdroid-ccs2013.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Swift: A Register-based JIT Compiler for Embedded JVMs.</div>
                         <div class="author">Yuan Zhang, Min Yang, Bo Zhou, Zhemin Yang, Weihua Zhang, Binyu Zang.</div>
                         <div class="venue">In Proceedings of the 8th international conference on Virtual execution environments, VEE’12, London, UK, March 3-4, 2012.
-                            <a href="./paper/swift-vee2012.pdf">[PDF]</a>
+                            <a href="./paper/swift-vee2012.pdf">[Paper]</a>
                         </div>
                     </li>
                 </ol>
@@ -495,8 +508,9 @@
             <h3><a name="services">Services</a></h3>
             <div>TPC Member:<br>
                 <ul>
-                    <li>SecureComm 2020</i>
-                    <li>ESORICS 2020</i>
+                    <li>the 16th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2021)</i>
+                    <li>the 16th EAI Conference on Security and Privacy in Communication Networks (SecureComm 2020)</i>
+                    <li>the 25th European Symposium on Research in Computer Security (ESORICS 2020)</i>
                 </ul>
             </div>
             <div>Journal Reviewer:<br>
@@ -529,7 +543,7 @@
             </div>
 
             <br>
-            <center><small>Last Modified: April 2, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: July 29, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
