update main page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-        font: 100% Verdana, Arial, Helvetica, sans-serif;
+        /*font: 100% Verdana, Arial, Helvetica, sans-serif;*/
 	    font-family: "Helvetica Neue";
         background-color: #FFFFFF;
         list-style: blue4;
@@ -262,24 +262,33 @@
                 <small><a href="https://scholar.google.com/citations?user=ZEgzyZcAAAAJ">Google Scholar Profile</a></small>
                 <br>
 			</p-->
-            <p>
+            <p style="font-size: 1.1rem;">
                 I am an Associate Professor in the <a href="http://www.cs.fudan.edu.cn/">School of Computer Science</a> of <a href="http://www.fudan.edu.cn/">Fudan University</a>. 
                 I co-direct the System Software and Security Laboratory of Fudan University.
                 I am also the co-founder and the coach of a great CTF Team in Fudan University, named <a href="https://ctftime.org/team/57907">Whitzard</a>. 
                 We took part in many great world-wide CTF competitions and won good places.
             </p>
-            <p>
+            <!--p>
                 I earned my Ph.D degree in Computer Science from Fudan University in 2014,
                 and my Bachelor degree in Software Engineering from Nanjing University in 2009.
-            </p>
-            <p>
+            </p-->
+            <!--p>
                 My research interests span all areas in system security and software analysis,
                 especially on open-source software security, vulnerability discovery/analysis/exploitation/mitigation, Android security.
+            </p-->
+            <p style="font-size: 1.1rem;">
+                I aim to do relevant and reasonable system security research. My research interests span all areas in system security especially on <i>widely-deployed and critical</i> targets, while currently focusing on <i>open-source software, kernels, Android/Web platforms</i>. 
             </p>
-            <p style="font-size: 90%;">
-                <i><b>To prospective students/postdoctors.</b> If you want to work with me to tackle cutting-edge system security problems, 
-                    please feel free to drop me an email.</i>
+            <p style="font-size: 1.1rem;">
+                My research covers a wide range of topics, including <i>vulnerability discovery/exploitation/mitigation, malware/attack detection, privacy protection</i>. 
+                To address these problems, we usually use multi-disciplined techniques such as <i>Program Analysis, Machine/Deep Learning, NLP</i>.
             </p>
+            <p style="font-size: 1rem;">
+                <b>To prospective students/post-doctors:</b> <i>If you are interested in our research, please feel free to reach out.</i>
+            </p>
+            <!--p style="font-size: 90%;">
+                <i><b>To prospective students/post-doctors.</b> If you have similar research interests, please feel free reach out.</i>
+            </p-->
             <p style="font-family: Courier New">
                 <b>Email:</b> yuanxzhang [AT] fudan.edu.cn <br>
                 <b>Office:</b> Room 313, Software Building, NO. 825 Zhangheng Road, Shanghai
@@ -299,12 +308,15 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[August, 2020] Join the TPC of <a href="http://www.codaspy.org/2021/cfp.html">CODASPY 2021</a>. Welcome to submit!</li>
                     <li>[July, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Xiaohan! <br/> 
-                        <i>In this paper, we introduce a new concept, named <b>API semantics</b>, to tackle model aging (a long-standing problem) in evolved malware detection, from the perspective of enhancing feature space abstractions. </i>
+                        <i>>>> In this paper, we introduce a new concept, named <b>API semantics</b>, to tackle model aging (a long-standing problem) in malware detection, from the perspective of enhancing feature space abstractions. </i>                        
                     </li>
                     <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li>
-                    <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> <i>This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
-                    <li>[March, 2020] One paper (conditionally) accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> <i>This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
+                    <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> 
+                        <i>>>> This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
+                    <li>[March, 2020] One paper (conditionally) accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> 
+                        <i>>>> This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
                     <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
                     <li>[Dec, 2019] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2020/">Oakland 2020</a>. Congrats Yuyu & Lei!</li>
                     <li>[Dec, 2019] One paper accepted by <a href="https://2020.icse-conferences.org/">ICSE 2020</a>. See you in Seoul!</li>
@@ -508,6 +520,7 @@
             <h3><a name="services">Services</a></h3>
             <div>TPC Member:<br>
                 <ul>
+                    <li>the 11th ACM Conference on Data and Application Security and Privacy (CODASPY 2021)</i>
                     <li>the 16th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2021)</i>
                     <li>the 16th EAI Conference on Security and Privacy in Communication Networks (SecureComm 2020)</i>
                     <li>the 25th European Symposium on Research in Computer Security (ESORICS 2020)</i>
