update main page

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 especially on open-source software security, vulnerability discovery/analysis/exploitation/mitigation, Android security.
             </p-->
             <p style="font-size: 1.1rem;">
-                I aim to do relevant and reasonable system security research. My research interests span all areas in system security especially on <i>widely-deployed and critical</i> targets, while currently focusing on <i>open-source software, kernels, Android/Web platforms</i>. 
+                I aim to do relevant and reasonable system research. My research interests span all areas in system security especially on <i>widely-deployed and critical</i> targets, while currently focusing on <i>open-source software, kernels, Android/Web platforms</i>. 
             </p>
             <p style="font-size: 1.1rem;">
                 My research covers a wide range of topics, including <i>vulnerability discovery/exploitation/mitigation, malware/attack detection, privacy protection</i>. 
