--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@
             </p-->
             <p style="font-family: Courier New">
                 <b>Email:</b> yuanxzhang [AT] fudan.edu.cn <br>
-                <b>Office:</b> Room 313, Software Building, NO. 825 Zhangheng Road, Shanghai
+                <del><b>Office:</b> Room 313, Software Building, NO. 825 Zhangheng Road, Shanghai</del> <br>
+                <b>Office (Jiangwan Campus):</b> Room A6013, NO.2 Interdisciplinary Building, NO.2005 Songhu Road, Yangpu District, Shanghai
             </p>
 
             <!-- 
@@ -308,7 +309,10 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
-                    <li>[August, 2020] Join the TPC of <a href="http://www.codaspy.org/2021/cfp.html">CODASPY 2021</a>. Welcome to submit!</li>
+                    <li>[Sep, 2020] One paper (conditionally) accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
+                        <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to the latest Linux kernel (5.6-rc2), we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
+                    </li>
+                    <li>[Aug, 2020] Join the TPC of <a href="http://www.codaspy.org/2021/cfp.html">CODASPY 2021</a>. Welcome to submit!</li>
                     <li>[July, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Xiaohan! <br/> 
                         <i>>>> In this paper, we introduce a new concept, named <b>API semantics</b>, to tackle model aging (a long-standing problem) in malware detection, from the perspective of enhancing feature space abstractions. </i>                        
                     </li>
@@ -341,15 +345,23 @@
             <div id="pub">
                 <ol>    
                     <li>
+                        <div class="title">Detecting Kernel Refcount Bugs with Two-Dimensional Consistency Checking.</div>
+                        <div class="author">Xin Tan, Yuan Zhang, Xiyu Yang, Kangjie Lu, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 30th USENIX Security Symposium, Security’21, Vancouver, Canada, August 11-13, 2021 (conditional accepted).
+                        </div>
+                    </li>   
+                    <li>
                         <div class="title">Enhancing State-of-the-art Classifiers with API Semantics to Detect Evolved Android Malware.</div>
                         <div class="author">Xiaohan Zhang, Yuan Zhang, Ming Zhong, Daizong Ding, Yinzhi Cao, Yukun Zhang, Mi Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020 (comming soon).
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020.
+                            <a href="./paper/apigraph-ccs20.pdf">[Paper]</a>
                         </div>
                     </li>               
                     <li>
                         <div class="title">PDiff: Semantic-based Patch Presence Testing for Downstream Kernels.</div>
                         <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Qi Wen, Zhenghe Wang, Xiaohan Zhang, Xinyu Xing, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020 (comming soon).
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020.
+                            <a href="./paper/pdiff-ccs20.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
@@ -497,7 +509,7 @@
                         <ul><li><i>Spring 2018, Spring 2019, Spring 2020</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
-                        <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019</i></li></ul>
+                        <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019, Fall 2020</i></li></ul>
                     </li>
                     <li> Compiler Principles <i>(in School of Software)</i>
                         <ul><li><i>Fall 2017</i></li></ul>
@@ -556,7 +568,7 @@
             </div>
 
             <br>
-            <center><small>Last Modified: July 29, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: Sep 14, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
