--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div>
                 <ul>
                     <li>[Sep, 2020] One paper (conditionally) accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
-                        <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to the latest Linux kernel (5.6-rc2), we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
+                        <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to <u>the latest Linux kernel (5.6-rc2)</u>, we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
                     </li>
                     <li>[Aug, 2020] Join the TPC of <a href="http://www.codaspy.org/2021/cfp.html">CODASPY 2021</a>. Welcome to submit!</li>
                     <li>[July, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Xiaohan! <br/> 
