--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
-                    <li>[Sep, 2020] One paper (conditionally) accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
+                    <li>[Sep, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
                         <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to <u>the latest Linux kernel (5.6-rc2)</u>, we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
                     </li>
                     <li>[Aug, 2020] Moved to the beautiful Jiangwan campus, welcome to visit us!</li>
@@ -320,7 +320,7 @@
                     <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li>
                     <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> 
                         <i>>>> This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
-                    <li>[March, 2020] One paper (conditionally) accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> 
+                    <li>[March, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> 
                         <i>>>> This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
                     <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
                     <li>[Dec, 2019] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2020/">Oakland 2020</a>. Congrats Yuyu & Lei!</li>
@@ -348,7 +348,7 @@
                     <li>
                         <div class="title">Detecting Kernel Refcount Bugs with Two-Dimensional Consistency Checking.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Xiyu Yang, Kangjie Lu, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 30th USENIX Security Symposium, Security’21, Vancouver, Canada, August 11-13, 2021 (conditional accepted).
+                        <div class="venue">In Proceedings of the 30th USENIX Security Symposium, Security’21, Vancouver, Canada, August 11-13, 2021 (coming soon).
                         </div>
                     </li>   
                     <li>
@@ -541,9 +541,11 @@
             </div>
             <div>Journal Reviewer:<br>
                 <ul>
-                    <li>Computer & Security 2016, 2017, 2018, 2019</li>
+                    <li>IEEE Transactions on Network and Service Management 2020</li>
+                    <li>Computer Communications 2020</li>
+                    <li>Computer & Security 2016, 2017, 2018, 2019, 2020</li>
+                    <li>Journal of Software 2016, 2017, 2018, 2019, 2020</li>
                     <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019</li>
-                    <li>Journal of Software 2016, 2017, 2018, 2019</li>
                     <li>IEEE Transactions on Mobile Computing (TMC) 2016</li>
                     <li>ACM Transactions on Information Systems (TOIS) 2016</li>
                     <li>SCIENCE CHINA Information Sciences 2016</li>
@@ -569,7 +571,7 @@
             </div>
 
             <br>
-            <center><small>Last Modified: Sep 14, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: Sep 27, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
