--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
             <h3><a name="services">Services</a></h3>
             <div>TPC Member:<br>
                 <ul>
+                    <li>the 6th IEEE European Symposium on Security and Privacy (EuroS&P 2021)</i>
                     <li>the 11th ACM Conference on Data and Application Security and Privacy (CODASPY 2021)</i>
                     <li>the 16th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2021)</i>
                     <li>the 16th EAI Conference on Security and Privacy in Communication Networks (SecureComm 2020)</i>
